<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#216EBC"
    android:id="@+id/main"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_tvTitulo"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp" />

    <TextView
        android:id="@+id/tvPreguntaNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_tvPreguntaNombre"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="6dp" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/hint_etNombre"
        android:inputType="text"
        android:padding="12dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/edit_text"/>

    <TextView
        android:id="@+id/tvPreguntaApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_tvPreguntaApellido"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="6dp" />

    <EditText
        android:id="@+id/etApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/hint_etApellido"
        android:inputType="text"
        android:padding="12dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/edit_text"/>

    <Button
        android:id="@+id/btnSaludar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_btnSaludar"
        android:textSize="16sp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="12dp" />

    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_btnLimpiar"
        android:textSize="16sp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="32dp"
        android:textColor="#FF1000"/>

    <TextView
        android:id="@+id/tvSaludo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginHorizontal="20dp"/>

    <TextView
        android:id="@+id/tvMensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="20dp"/>

</LinearLayout>